chore: purge the world of the evil that is kotlin (mostly)
Signed-off-by: Thatsmusic99 <25277367+thatsmusic99@users.noreply.github.com>